server_verify_2.log
  File "/app/main.py", line 158
    elif file:
    ^^^^
SyntaxError: invalid syntax
